--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,10 +68,10 @@ button {
 .hole:after {
     content: '';
     display: block;
-    background-image: url(/assets/images/misc-proto-dirt-pile.svg);
+    background-image: url(/assets/images/pngwing.com.png);
     position: absolute;
     width: 100%;
-    height: 70px;
+    height: 100%;
     z-index: 2;
     bottom: -30px;
     background-size: contain;
