--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,20 +6,27 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
 }
+
+h1 {
+    font-size: 50px;
+    text-align: center;
+}
+
 .wrapper {
-    border: 3px solid #010124;
+    border: 3px solid black;
     width: 800px;
     height: 600px;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-image: url(/assets/images/background.jpg);
+    background-image: url(/assets/images/background.png);
+    background-size: cover;
     overflow: hidden;
 }
 .score {
     font-size: 150px;
-    color: #010124;
+    color: whitesmoke;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -35,7 +42,7 @@ body {
     width: 100%;
     font-size: 20px;
     text-align: center;
-    color: #010124;
+    color: whitesmoke;
 }
 
 button {
@@ -65,19 +72,21 @@ button {
     position: relative;
     overflow: hidden;
 }
+
 .hole:after {
     content: '';
     display: block;
-    background-image: url(/assets/images/pngwing.com.png);
+    background-image: url(/assets/images/sand1.png);
     position: absolute;
     width: 100%;
-    height: 100%;
+    height: 70px;
     z-index: 2;
     bottom: -30px;
     background-size: contain;
 }
+
 .mole {
-    background-image: url(/assets/images/putin.png);
+    background-image: url(/assets/images/chrisrock.png);
     position: absolute;
     top: 100%;
     width: 100%;
