--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,7 @@
     padding: 0;
     box-sizing: border-box;
 }
+
 body {
     font-family: Arial, Helvetica, sans-serif;
 }
@@ -20,10 +21,11 @@ h1 {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-image: url(/assets/images/background.png);
+    background-image: url(/assets/images/background.jpg);
     background-size: cover;
     overflow: hidden;
 }
+
 .score {
     font-size: 150px;
     color: whitesmoke;
@@ -50,7 +52,7 @@ button {
     bottom: 10px;
     left: 50%;
     transform: translate(-50%, 0);
-    background: #010124;
+    background: orange;
     color: white;
     padding: 20px 50px;
     border-radius: 5px;
@@ -59,6 +61,11 @@ button {
     border: none;
     outline: none;
 }
+
+button:hover {
+    background-color: whitesmoke;
+}
+
 .game {
     width: 600px;
     height: 400px;
@@ -67,6 +74,7 @@ button {
     display: flex;
     flex-wrap: wrap;
 }
+
 .hole {
     flex: 1 0 33.33%;
     position: relative;
@@ -95,12 +103,28 @@ button {
     background-repeat: no-repeat;
     background-position: bottom;
 }
+
 .mole.small {
     background-size: 60%;
 }
+
 .mole.large {
     background-size: 80%;
 }
+
 .hole.up .mole {
     top: 0;
+}
+
+.cursor{
+    height: 150px;
+    width: 150px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    background-image: url(/assets/images/willslap.png);
+    background-size: 100% 100%;
+    transform: translate(-50%, -50%);
+    transition: transform .1s;
+    pointer-events: none;
 }
