--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Lato:ital,wght@0,300;0,400;0,700;1,300;1,400&family=Staatliches&display=swap');
+
 * {
     margin: 0;
     padding: 0;
@@ -5,7 +7,7 @@
 }
 
 body {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Bebas Neue', Arial, Helvetica, sans-serif;
 }
 
 .wrapper {
@@ -44,15 +46,16 @@ body {
 }
 
 button {
-    font-size: 25px;
+    font-family: 'Bebas Neue', Arial, Helvetica, sans-serif;
+    font-size: 30px;
     position: absolute;
     bottom: 10px;
     left: 50%;
     transform: translate(-50%, 0);
     background: orange;
     color: white;
-    padding: 10px 50px;
-    border-radius: 5px;
+    padding: 10px 40px;
+    border-radius: 2px;
     z-index: 200;
     cursor: pointer;
     border: none;
@@ -96,7 +99,7 @@ button:hover {
     top: 100%;
     width: 100%;
     height: 100%;
-    transition: 0.4s;
+    transition: 0.5s;
     background-repeat: no-repeat;
     background-position: bottom;
 }
