--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -129,7 +129,11 @@ button:hover {
     pointer-events: none;
 }
 
-@media screen and (max-width: 480px) {
-    body {align-items: center;}
-    .wrapper {width: auto; height: auto;}
+@media screen and (max-width: 390px) {
+    .wrapper {width: 100%; height: 100%; background-position: center;}
+    .score {position: relative;}
+    .countdown {position: relative; top: 50px;}
+    .game {display: flex; flex-flow: wrap;}
+    .mole.large {background-size: contain;}
+    .mole.small {background-size: contain;}
   }
