--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -130,6 +130,7 @@ button:hover {
 }
 
 @media screen and (max-width: 390px) {
+    body {margin: 0 auto;}
     .wrapper {width: 100%; height: 100%; background-position: center;}
     .score {position: relative;}
     .countdown {position: relative; top: 50px;}
