--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,14 +48,8 @@ body {
 
 button {
     font-family: 'Bebas Neue', Arial, Helvetica, sans-serif;
-    font-size: 30px;
-    position: absolute;
-    bottom: 10px;
-    left: 50%;
-    transform: translate(-50%, 0);
     background: orange;
-    color: white;
-    padding: 10px 40px;
+    padding: 10px 20px;
     border-radius: 2px;
     z-index: 200;
     cursor: pointer;
@@ -65,6 +59,22 @@ button {
 
 button:hover {
     background-color: whitesmoke;
+}
+
+#start-button {
+    position: fixed;
+    bottom: 10px;
+    left: 10px;
+    color: white;
+    font-size: 30px;
+}
+
+#modal-button { 
+    position: fixed;
+    bottom: 10px;
+    right: 10px;
+    color: white;
+    font-size: 30px;
 }
 
 .game {
@@ -130,12 +140,79 @@ button:hover {
     pointer-events: none;
 }
 
+.modal {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(0);
+    transition: 200ms ease-in-out;
+    border: 1px solid black;
+    border-radius: 10px;
+    z-index: 10;
+    background-color: white;
+    width: 500px;
+    max-width: 80%;
+  }
+  
+  .modal.active {
+    transform: translate(-50%, -50%) scale(1);
+  }
+  
+  .modal-header {
+    clear: both;
+    padding: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 1px solid black;
+  }
+  
+  .modal-header .title {
+    font-size: 1.25rem;
+    font-weight: bold;
+  }
+  
+  .modal-header .close-button {
+    cursor: pointer;
+    border: none;
+    outline: none;
+    background: none;
+    font-size: 2rem;
+    font-weight: bold;
+  }
+  
+  .modal-body {
+    padding: 10px 15px;
+    font-size: 1.25rem;
+  }
+  
+  #overlay {
+    position: fixed;
+    opacity: 0;
+    transition: 200ms ease-in-out;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, .5);
+    pointer-events: none;
+  }
+  
+  #overlay.active {
+    opacity: 1;
+    pointer-events: all;
+  }
+
 @media screen and (max-width: 420px) {
     .wrapper {width: 100%; height: 100%; background-position: center;}
-    .score {position: relative; clear: both;}
     .countdown {position: relative; top: 75%;}
-    .game {width: 100%;}
+    .game {width: 100%; margin: 0 auto;}
     .mole.large {background-size: contain;}
     .mole.small {background-size: contain;}
     .hole:after {bottom: -55px;}
+    [data-button-group] > div {
+
+        flex-direction: column;
+    
+    }
   }
