--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -160,7 +160,7 @@ button:hover {
   
   .modal-header {
     clear: both;
-    padding: 10px;
+    padding: 0px 10px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -168,7 +168,7 @@ button:hover {
   }
   
   .modal-header .title {
-    font-size: 1.25rem;
+    font-size: 2rem;
     font-weight: bold;
   }
   
@@ -177,7 +177,7 @@ button:hover {
     border: none;
     outline: none;
     background: none;
-    font-size: 2rem;
+    font-size: 3rem;
     font-weight: bold;
   }
   
