--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -205,7 +205,7 @@ button:hover {
 @media screen and (max-width: 420px) {
     .wrapper {width: 100%; height: 100%; background-position: center;}
     .countdown {position: fixed; bottom: 20px; top: unset;}
-    .game {width: 100%; margin: 0 auto; position: fixed; top: 40%; left: 50%; translate: -50% -50%}
+    .game {width: 100%; margin: 0 auto; position: fixed; top: 40%; left: 50%; transform: translate(-50%, -50%)}
     .mole.large {background-size: contain;}
     .mole.small {background-size: contain;}
     .hole:after {bottom: -55px;}
