--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,8 @@ body {
     background-color:rgb(255, 219, 112);
 }
 
+/* Game-Area-section, score and time */
+
 .wrapper {
     border: 3px solid black;
     width: 800px;
@@ -46,6 +48,8 @@ body {
     color: red;
 }
 
+/* Buttons */
+
 button {
     font-family: 'Bebas Neue', Arial, Helvetica, sans-serif;
     background: orange;
@@ -76,6 +80,8 @@ button:hover {
     font-size: 30px;
 }
 
+/* Game-Area */
+
 .game {
     width: 600px;
     height: 400px;
@@ -84,6 +90,8 @@ button:hover {
     display: flex;
     flex-wrap: wrap;
 }
+
+/* The Mole (Chris Rock) and the holes */
 
 .hole {
     flex: 1 0 33.33%;
@@ -126,6 +134,8 @@ button:hover {
     top: 0;
 }
 
+/* Will Smith cursor */
+
 .cursor{
     height: 160px;
     width: 160px;
@@ -138,6 +148,8 @@ button:hover {
     transition: transform .1s;
     pointer-events: none;
 }
+
+/* The how to play-pop up menu */
 
 .modal {
     position: fixed;
@@ -201,6 +213,8 @@ button:hover {
     opacity: 1;
     pointer-events: all;
   }
+
+/* Media Queries */
 
 @media screen and (max-width: 420px) {
     .wrapper {width: 100%; height: 100%; background-position: center;}
